MyDev Project/src/objects/course__c.object
<CustomObject>
    <description>courses available</description>
    <fields>
        <fullName>AccountCourse__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>tcs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>courses</relationshipLabel>
        <relationshipName>courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CouseFee__c</fullName>
        <label>CouseFee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>$User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserName</label>
        <type>Text</type>
    </fields>
    <label>course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>